// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breadcrumb Breadcrumb should match snapshot 1`] = `
<div
  className="mockClassName"
  style={
    Object {
      "font": "10rem",
    }
  }
>
  <div
    isLast={true}
    key="0"
    separator="/"
  >
    mock Menu
  </div>
</div>
`;

exports[`breadcrumb Breadcrumb should match snapshot 2`] = `
<div
  className="mockClassName"
  style={
    Object {
      "font": "10rem",
    }
  }
>
  <Memo(BreadcrumbItem)
    isLast={false}
    key="index"
    separator="/"
  >
    <a
      href="index"
    >
      home
    </a>
  </Memo(BreadcrumbItem)>
  <Memo(BreadcrumbItem)
    isLast={false}
    key="first"
    separator="/"
  >
    <a
      href="index/first"
    >
      first
    </a>
  </Memo(BreadcrumbItem)>
  <Memo(BreadcrumbItem)
    isLast={true}
    key="second"
    separator="/"
  >
    <span>
      second
    </span>
  </Memo(BreadcrumbItem)>
</div>
`;

exports[`breadcrumb cloneElement should run correctly 1`] = `
<div>
  <div
    separator="/"
  >
    Mock Element
  </div>
</div>
`;

exports[`breadcrumb defaultItemRenderer should run correctly 1`] = `
<div>
  <a
    href="#/index/first/second"
  >
    home
  </a>
</div>
`;

exports[`breadcrumb genForRoutes should run correctly 1`] = `
<div>
  <Memo(BreadcrumbItem)
    isLast={false}
    key="index"
    separator="/"
  >
    <a
      href="#/index"
    >
      home
    </a>
  </Memo(BreadcrumbItem)>
  <Memo(BreadcrumbItem)
    isLast={false}
    key="first"
    separator="/"
  >
    <a
      href="#/index/first"
    >
      first
    </a>
  </Memo(BreadcrumbItem)>
  <Memo(BreadcrumbItem)
    isLast={true}
    key="second"
    separator="/"
  >
    <span
      className="breadcrumb-item"
    >
      second
    </span>
  </Memo(BreadcrumbItem)>
</div>
`;

exports[`breadcrumb genForRoutes should run correctly 2`] = `
<div>
  <Memo(BreadcrumbItem)
    isLast={false}
    key="index"
    separator="/"
  >
    <a
      href="index"
    >
      home
    </a>
  </Memo(BreadcrumbItem)>
  <Memo(BreadcrumbItem)
    isLast={false}
    key="first"
    separator="/"
  >
    <a
      href="index/first"
    >
      first
    </a>
  </Memo(BreadcrumbItem)>
  <Memo(BreadcrumbItem)
    isLast={true}
    key="second"
    separator="/"
  >
    <span>
      second
    </span>
  </Memo(BreadcrumbItem)>
</div>
`;
